k8s/noBounds/analysisManager.yaml
# Deployment, Service and Ingress for the analysis manager

# analysismanager Deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: analysismanager
  namespace: demaf
  labels:
    app.kubernetes.io/name: analysismanager
    app.kubernetes.io/version: v3.0.0
    app.kubernetes.io/component: manager
    app.kubernetes.io/part-of: demaf
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: analysismanager
  template:
    metadata:
      name: analysismanager
      labels:
        app.kubernetes.io/name: analysismanager
        app.kubernetes.io/instance: analysismanager-pod
        app.kubernetes.io/version: v3.0.0
        app.kubernetes.io/component: manager
        app.kubernetes.io/part-of: demaf
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                  - key: kubernetes.io/hostname
                    operator: In
                    values:
                      - k8s-cluster3-5
      containers:
        - name: analysismanager
          image: ghcr.io/ust-demaf/analysis-manager:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          livenessProbe:
            httpGet:
              path: /actuator/health
              port: 8080
            initialDelaySeconds: 60
            failureThreshold: 3
            periodSeconds: 10
            timeoutSeconds: 15
      hostname: analysismanager
      restartPolicy: Always
      volumes:
        - name: demaf
          persistentVolumeClaim:
            claimName: demaf-pvc
---
# analysismanager Service
apiVersion: v1
kind: Service
metadata:
  name: analysismanager
  namespace: demaf
spec:
  selector:
    app.kubernetes.io/name: analysismanager
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
