k8s/noBounds/modelsService.yaml
# Deployment and Service for models service

# modelsservice Deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: modelsservice
  namespace: demaf
  labels:
    app.kubernetes.io/name: modelsservice
    app.kubernetes.io/version: v3.0.0
    app.kubernetes.io/component: service
    app.kubernetes.io/part-of: demaf
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: modelsservice
  template:
    metadata:
      name: modelsservice
      labels:
        app.kubernetes.io/name: modelsservice
        app.kubernetes.io/instance: modelsservice-pod
        app.kubernetes.io/version: v3.0.0
        app.kubernetes.io/component: service
        app.kubernetes.io/part-of: demaf
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                  - key: kubernetes.io/hostname
                    operator: In
                    values:
                      - k8s-cluster3-5
      containers:
        - name: modelsservice
          image: ghcr.io/ust-demaf/models-service:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8081
          volumeMounts:
            - name: demaf
              mountPath: /usr/share
          livenessProbe:
            httpGet:
              path: /actuator/health
              port: 8081
            initialDelaySeconds: 60
            failureThreshold: 3
            periodSeconds: 10
            timeoutSeconds: 15
      hostname: modelsservice
      restartPolicy: Always
      volumes:
        - name: demaf
          persistentVolumeClaim:
            claimName: demaf-pvc
---
# modelsservice Service
apiVersion: v1
kind: Service
metadata:
  name: modelsservice
  namespace: demaf
spec:
  selector:
    app.kubernetes.io/name: modelsservice
  ports:
    - protocol: TCP
      port: 8081
      targetPort: 8081
