k8s/noBounds/tasksDB.yaml
# Deployment and Service for tasks database

# tasksdatabase Deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tasksdatabase
  namespace: demaf
  labels:
    app.kubernetes.io/name: tasksdatabase
    app.kubernetes.io/version: v3.0.0
    app.kubernetes.io/component: database
    app.kubernetes.io/part-of: demaf
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tasksdatabase
  template:
    metadata:
      name: tasksdatabase
      labels:
        app.kubernetes.io/name: tasksdatabase
        app.kubernetes.io/instance: tasksdatabase-pod
        app.kubernetes.io/version: v3.0.0
        app.kubernetes.io/component: database
        app.kubernetes.io/part-of: demaf
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                  - key: kubernetes.io/hostname
                    operator: In
                    values:
                      - k8s-cluster3-5
      containers:
        - name: tasksdatabase
          image: postgres:17.5
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 5432
          livenessProbe:
            exec:
              command:
                - sh
                - -c
                - |
                  pg_isready -U tad -d tasks
            initialDelaySeconds: 60
            failureThreshold: 3
            periodSeconds: 10
            timeoutSeconds: 15
      hostname: tasksdatabase
      restartPolicy: Always
---
# tasksdatabase Service
apiVersion: v1
kind: Service
metadata:
  name: tasksdatabase
  namespace: demaf
spec:
  selector:
    app: tasksdatabase
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
