k8s/noBounds/webUI.yaml
# Deployment, Service and Ingress definitions for the web UI

# web-ui Deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-ui
  namespace: demaf
spec:
  replicas: 1
  selector:
    matchLabels:
      app: web-ui
  template:
    metadata:
      labels:
        app: web-ui
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                  - key: kubernetes.io/hostname
                    operator: In
                    values:
                      - k8s-cluster3-5
      containers:
        - name: web-ui
          image: ghcr.io/ust-demaf/web-ui:nightly
          imagePullPolicy: Always
          ports:
            - containerPort: 80
          volumeMounts:
            - name: demaf
              mountPath: /usr/share
          livenessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 60
            failureThreshold: 3
            periodSeconds: 10
            timeoutSeconds: 15
      hostname: web-ui
      restartPolicy: Always
      volumes:
        - name: demaf
          persistentVolumeClaim:
            claimName: demaf-pvc
---
# web-ui Service
apiVersion: v1
kind: Service
metadata:
  name: web-ui
  namespace: demaf
spec:
  selector:
    app: web-ui
  ports:
    - name: frontend
      protocol: TCP
      port: 80
      targetPort: 80
