k8s/noBounds/winery.yaml
# Deployment, Service and Ingress definitions for Winery

# Winery Deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: winery
  namespace: demaf
spec:
  replicas: 1
  selector:
    matchLabels:
      app: winery
  template:
    metadata:
      labels:
        app: winery
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                  - key: kubernetes.io/hostname
                    operator: In
                    values:
                      - k8s-cluster3-7
      containers:
        - name: winery
          image: opentosca/winery:v3.0.9-M1
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
          volumeMounts:
            - name: winery
              mountPath: /var/repository
          livenessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 60
            failureThreshold: 3
            periodSeconds: 10
            timeoutSeconds: 15
      hostname: winery
      restartPolicy: Always
      volumes:
        - name: winery
          persistentVolumeClaim:
            claimName: winery-pvc
---
# Winery Service
apiVersion: v1
kind: Service
metadata:
  name: winery
  namespace: demaf
spec:
  selector:
    app: winery
  ports:
    - protocol: TCP
      port: 8079
      targetPort: 8080
